# Numerical_Project

./: .gitignore  README.md  cities.txt  code.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/: HomePage.py  ee-glourb-58e556f00841.json  ee_interface_function.py  interface.py  tests.py
src/.streamlit/: config.toml
src/eewaterextraction/: assets_management.py  classification.py  data_management.py  dgo_metrics.py  visualization.py
src/glourbee/: assets_management.py  classification.py  dgo_indicators.py  dgo_metrics.py  visualization.py  workflow.py
src/pages/: 1_🕶️_Authentication.py  2_🌍_Upload_dgos.py  3_📈_Choose_metrics.py  Authentication.py  PageOne.py  PageTwo.py
tests/: test_cities.py  test_python.py
