[project]
name = "glourbinterface" #what you write after pip install
version = "0.0.1" # 0.0.x generaly means it is unstable
authors = [
  { name="Julie Limonet", email="julie.limonet@gmail.com" },
]
# usually a one liner
description = "Streamlit interface for Google Earth Engine"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["Interface", "Google Earth Engine", "GEE", "Google Earth Engine interface" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv3 License",
    "Operating System :: Windows",
]

dependencies = [
  #"streamlit > 1.28.2" 
]

[tools.pytest.ini_options]
pythonpath = [ ".", "src",]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"



[project.scripts]
glourbinterface = "HomePage:run_streamlit"


#[tool.poetry.scripts]
#run_glourbinterface = "streamlit run .\\src\\HomePage.py"

#[tool.poetry.scripts."glourbinterface"]
#command = "run_glourbinterface"
